# sample.dotblog

./: .gitignore  @tree.md  README.md
.archive/: remove_co_authored_by.plan.md
.issues/: remove_co_authored_by.issues.md
ClassLibrary1/: ClassLibrary1.sln  ClassLibrary1.sln.GhostDoc.xml
Gitlab/Lab.PersonInfo/: .env.example  .gitignore  API_USAGE.md  CONFIG_GUIDE.md  GitLab開發者分析系統實作計畫.Progress.md  GitLab開發者分析系統實作計畫.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SETUP.md  analysis-spec.md  get_gitlab_developers.py  get_gitlab_developers.sh  list_developers.sh  pyproject.toml  取得GitLab開發者.md  完整評估指南.md  腳本執行指南.md  評估框架說明.md
Gitlab/Lab.PersonInfo/.claude/: settings.local.json
Gitlab/Lab.PersonInfo/scripts/: analyze_all_developers.sh  analyze_developer.sh  collect_data.py  developer_analyzer.py  main.py  progress_analyzer.py  test_connection.py
Gitlab/Lab.PersonInfo/scripts/analyzers/: commit_analyzer.py  contribution_analyzer.py  score_calculator.py  tech_breadth_analyzer.py
Gitlab/Lab.PersonInfo/scripts/collectors/: data_merger.py  git_local_collector.py  gitlab_api_collector.py
Gitlab/Lab.PersonInfo/scripts/config/: analysis_config.py  gitlab_config.py
Gitlab/Lab.Personal/scripts/: .gitignore  README-2.md  README.md  base_gitlab_collector.py  config.example.py  export_all_projects.py  export_all_users.py  filters.py  gitlab_analyzer.py  gitlab_cli.py  gitlab_client.py  gitlab_collector.py  gitlab_developer_collector.py  gl-cli-2.py  gl-cli.py  models.py  pyproject.toml  run-gl-cli.ps1  run-gl-cli.sh
Host/: Lab.MsHost.sln
Image/: Lab.CleanDuplicatesImage.sln
Lab.AspNetPassParameter/: Lab.AspNetPassParameter.sln
Lab.Loki.WebApi/: MemberController.cs
Lab.NoMagicNumeric/: Lab.NoMagicNumeric.sln
Nginx/: docker-compose.yml  nginx.conf
Test/Lab.Py.ApiTest/: .env  README.md  docker-compose.yml  main.py  pyproject.toml
Test/Lab.Py.ApiTest/app/: config.py  main.py  openapi.yml
Test/Lab.Py.ApiTest/app/api/: members.py
Test/Lab.Py.ApiTest/app/db/: member_entity.py  member_memory_repository.py  member_postgres_repository.py  member_repository.py  memory_db.py  postgres_db.py
Test/Lab.Py.ApiTest/app/di/: __init__.py  container.py
Test/Lab.Py.ApiTest/app/models/: member.py
Test/Lab.Py.ApiTest/tests/: create_test_db.py  test_members_api.py  test_members_api_postgres.py  test_memory_member_api.py  test_postgres_member_api.py
tolgee/: .env  (+2 more)
(+4804 files in other folders)
