[project]
name = "gitlab-analyzer"
version = "0.1.0"
description = "GitLab 開發者程式碼品質分析工具"
requires-python = ">=3.10"
dependencies = [
    "python-gitlab>=4.4.0",
    "pandas>=2.1.4",
    "requests>=2.31.0",
    "tqdm>=4.66.1",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
